--- a/webots/controllers/haskell/Makefile
+++ b/webots/controllers/haskell/Makefile
@@ -12,7 +12,7 @@ FILES_TO_REMOVE += copilot*
 all: haskell
 
 copilot_core.cpp : $(HASKDIR)/*.hs $(HASKDIR)/pids/*.hs
-	runhaskell -i$(HASKDIR) -i$(HASKDIR)/pids CoreTaskSim.hs
+	runhaskell -i$(HASKDIR) -i$(HASKDIR)/pids CoreTask.hs
 	mv copilot_core.c copilot_core.cpp
 
 size: copilot_core.cpp
