--- a/examples/haskell/Makefile
+++ b/examples/haskell/Makefile
@@ -12,7 +12,7 @@ build: $(SKETCH).ino copilot_core.cpp
 	arduino-cli compile --libraries $(LIBS) --libraries ../../.. --fqbn $(BOARD) $(SKETCH).ino
 
 copilot_core.cpp : $(HASKDIR)/*.hs $(HASKDIR)/pids/*.hs
-	runhaskell -i$(HASKDIR) -i$(HASKDIR)/pids CoreTaskReal.hs
+	runhaskell -i$(HASKDIR) -i$(HASKDIR)/pids CoreTask.hs
 	mv copilot_core.c copilot_core.cpp
 
 flash:
