--- a/examples/haskell/Makefile
+++ b/examples/haskell/Makefile
@@ -4,16 +4,22 @@ BOARD = teensy:avr:teensy40
 
 PORT = /dev/ttyACM0
 
+HASKDIR = ../../haskell
+
 LIBS = $(HOME)/Documents/Arduino/libraries
 
-build: $(SKETCH).ino
+build: $(SKETCH).ino copilot_core.cpp
 	arduino-cli compile --libraries $(LIBS) --libraries ../../.. --fqbn $(BOARD) $(SKETCH).ino
+
+copilot_core.cpp : CoreTask.hs $(HASKDIR)/*.hs $(HASKDIR)/pids/*.hs
+	runhaskell -i$(HASKDIR) -i$(HASKDIR)/pids CoreTask.hs
+	mv copilot_core.c copilot_core.cpp
 
 flash:
 	arduino-cli upload -p $(PORT) --fqbn $(BOARD) .
 
 clean:
-	rm -rf obj
+	rm -rf copilot*
 
 edit:
 	vim $(SKETCH).ino
