--- a/webots/controllers/snn-climbrate/Makefile
+++ b/webots/controllers/snn-climbrate/Makefile
@@ -16,8 +16,8 @@
 
 FDIR = $(HOME)/Desktop/framework
 
-# DIFFERENCE_NETWORK = $(FDIR)/networks/difference_risp.txt
 DIFFERENCE_NETWORK = $(HOME)/Desktop/hackflight/webots/controllers/snn-climbrate/climbrate_risp.txt
+DIFFERENCE_NETWORK2 = $(FDIR)/networks/difference_risp.txt
 
 CFLAGS = -O3 -std=c++11 -Wall -Wextra
 
@@ -52,11 +52,12 @@ edit:
 
 run:
 	@webots ../../worlds/simple.wbt &
-	@/usr/local/webots/webots-controller snn-climbrate $(DIFFERENCE_NETWORK) &
+	@/usr/local/webots/webots-controller snn-climbrate $(DIFFERENCE_NETWORK) $(DIFFERENCE_NETWORK2) &
 	@sleep 1
-	@cd $(FDIR)/viz; love . -i '{"source":"request","port":$(VIZ_PORT),"host":$(VIZ_HOST)}'  -n $(DIFFERENCE_NETWORK) \
-
-		--show_spike_count --remove_unnecessary_neuron --set_num_screen_shot 0 > /dev/null
+	@cd $(FDIR)/viz; \
+		love . -i '{"source":"request","port":$(VIZ_PORT),"host":$(VIZ_HOST)}' \
+		-n $(DIFFERENCE_NETWORK) --show_spike_count --remove_unnecessary_neuron \
+		--set_num_screen_shot 0 > /dev/null
 
 ### Do not modify: this includes Webots global Makefile.include
 null :=
