--- a/webots/controllers/snn-climbrate/Makefile
+++ b/webots/controllers/snn-climbrate/Makefile
@@ -51,7 +51,7 @@ edit:
 
 run:
 	webots ../../worlds/simple.wbt &
-	/usr/local/webots/webots-controller snn-climbrate $(NETWORK) |tail +11 > tmp.csv &
+	/usr/local/webots/webots-controller snn-climbrate $(NETWORK) |tail +11 > log.csv &
 	sleep 1
 	cd $(FDIR)/viz; \
 		love . -i '{"source":"request","port":$(VIZ_PORT),"host":$(VIZ_HOST)}' \
