new file:   networks/difference_risp.txt

--- a/webots/controllers/snn/Makefile
+++ b/webots/controllers/snn/Makefile
@@ -17,6 +17,7 @@
 FDIR = $(HOME)/Desktop/framework
 
 NETWORK = $(shell pwd)/networks/eons_climbrate_risp.txt
+# NETWORK = $(FDIR)/networks/difference_risp.txt
 
 CFLAGS = -O3 -std=c++11 -Wall -Wextra
 
