--- a/webots/controllers/snn/Makefile
+++ b/webots/controllers/snn/Makefile
@@ -68,5 +68,5 @@ WEBOTS_HOME_PATH=$(subst $(space),\ ,$(strip $(subst \,/,$(WEBOTS_HOME))))
 include $(WEBOTS_HOME_PATH)/resources/Makefile.include
 
 edit:
-	vim $(name).cpp
+	vim $(NAME).cpp
 
