Disable live network display

--- a/webots/controllers/snn/Makefile
+++ b/webots/controllers/snn/Makefile
@@ -51,6 +51,10 @@ VERBOSE = 1
 
 run:
 	webots ../../worlds/simple.wbt &
+	/usr/local/webots/webots-controller $(NAME) $(NETWORK) |tail +11 > log.csv
+
+bigrun:
+	webots ../../worlds/simple.wbt &
 	/usr/local/webots/webots-controller $(NAME) $(NETWORK) |tail +11 > log.csv &
 	sleep 1
 	cd $(FDIR)/viz; \
