--- a/webots/controllers/snn/Makefile
+++ b/webots/controllers/snn/Makefile
@@ -51,8 +51,7 @@ VERBOSE = 1
 
 run:
 	webots ../../worlds/simple.wbt &
-	# /usr/local/webots/webots-controller $(NAME) $(NETWORK) | tail +9 > log.csv
-	/usr/local/webots/webots-controller $(NAME) $(NETWORK)
+	/usr/local/webots/webots-controller $(NAME) $(NETWORK) | tail +9 > log.csv
 
 bigrun:
 	webots ../../worlds/simple.wbt &
