modified:   snn.cpp

--- a/webots/controllers/snn/Makefile
+++ b/webots/controllers/snn/Makefile
@@ -51,11 +51,11 @@ VERBOSE = 1
 run:
 	webots ../../worlds/simple.wbt &
 	/usr/local/webots/webots-controller $(NAME) $(NETWORK) | tail +9 > log.csv &
-	sleep 1
-	cd $(FDIR)/viz; \
-		love . -i '{"source":"request","port":$(CLIMBRATE_VIZ_PORT),"host":$(VIZ_HOST)}' \
-		-n $(NETWORK) --show_spike_count --remove_unnecessary_neuron \
-		--set_num_screen_shot 0 > /dev/null
+	# sleep 1
+	# cd $(FDIR)/viz; \
+ 	# love . -i '{"source":"request","port":$(CLIMBRATE_VIZ_PORT),"host":$(VIZ_HOST)}' \
+    # 	-n $(NETWORK) --show_spike_count --remove_unnecessary_neuron \
+    #		--set_num_screen_shot 0 > /dev/null
 
 bigrun:
 	webots ../../worlds/simple.wbt &
