--- a/webots/controllers/snn/Makefile
+++ b/webots/controllers/snn/Makefile
@@ -39,7 +39,7 @@ LIBRARIES = $(FDIR)/lib/libframework.a \
 
 NAME = snn
 
-CXX_SOURCES = $(NAME).cpp
+CXX_SOURCES = main.cpp
 
 all: $(NAME)
 
@@ -68,7 +68,7 @@ WEBOTS_HOME_PATH=$(subst $(space),\ ,$(strip $(subst \,/,$(WEBOTS_HOME))))
 include $(WEBOTS_HOME_PATH)/resources/Makefile.include
 
 edit:
-	vim $(NAME).cpp
+	vim main.cpp
 
 log:
 	libreoffice log.csv
