new file:   arduino/dongle/dongle.ino

--- a/arduino/fc/haskell/Makefile
+++ b/arduino/fc/haskell/Makefile
@@ -4,7 +4,7 @@ BOARD = teensy:avr:teensy40
 
 PORT = /dev/ttyACM0
 
-HASKDIR = ../../haskell
+HASKDIR = ../../../haskell
 
 LIBS = $(HOME)/Documents/Arduino/libraries
 
