--- a/arduino/fc/haskell/Makefile
+++ b/arduino/fc/haskell/Makefile
@@ -1,6 +1,6 @@
 SKETCH = haskell
 
-BOARD = teensy:avr:teensy40
+FQBN = teensy:avr:teensy40
 
 PORT = /dev/ttyACM0
 
@@ -9,14 +9,14 @@ HASKDIR = ../../../haskell
 LIBS = $(HOME)/Documents/Arduino/libraries
 
 build: $(SKETCH).ino copilot_core.cpp
-	arduino-cli compile --libraries $(LIBS) --libraries ../../.. --fqbn $(BOARD) $(SKETCH).ino
+	arduino-cli compile --libraries $(LIBS) --libraries ../../.. --fqbn $(FQBN) $(SKETCH).ino
 
 copilot_core.cpp : CoreTask.hs $(HASKDIR)/*.hs $(HASKDIR)/pids/*.hs
 	runhaskell -i$(HASKDIR) -i$(HASKDIR)/pids CoreTask.hs
 	mv copilot_core.c copilot_core.cpp
 
 flash:
-	arduino-cli upload -p $(PORT) --fqbn $(BOARD) .
+	arduino-cli upload -p $(PORT) --fqbn $(FQBN) .
 
 clean:
 	rm -rf copilot*
