--- a/arduino/esp32/onboard/Makefile
+++ b/arduino/esp32/onboard/Makefile
@@ -1,17 +1,17 @@
 SKETCH = onboard
 
 # For complete list run arduino-cli board listall
-BOARD = esp32:esp32:tinypico
+FQBN = esp32:esp32:tinypico
 
 PORT = /dev/ttyUSB0
 
 LIBS = $(HOME)/Documents/Arduino/libraries
 
 build: $(SKETCH).ino
-	arduino-cli compile --libraries $(LIBS) --fqbn $(BOARD) $(SKETCH).ino
+	arduino-cli compile --libraries $(LIBS) --fqbn $(FQBN) $(SKETCH).ino
 
 flash:
-	arduino-cli upload -p $(PORT) --fqbn $(BOARD) .
+	arduino-cli upload -p $(PORT) --fqbn $(FQBN) .
 
 edit:
 	vim $(SKETCH).ino
