--- a/arduino/fc/cplusplus/Makefile
+++ b/arduino/fc/cplusplus/Makefile
@@ -1,16 +1,16 @@
 SKETCH = cplusplus
 
-BOARD = teensy:avr:teensy40
+FQBN = teensy:avr:teensy40
 
 PORT = /dev/ttyACM0
 
 LIBS = $(HOME)/Documents/Arduino/libraries
 
 build: $(SKETCH).ino
-	arduino-cli compile --libraries $(LIBS) --libraries ../../.. --fqbn $(BOARD) $(SKETCH).ino
+	arduino-cli compile --libraries $(LIBS) --libraries ../../.. --fqbn $(FQBN) $(SKETCH).ino
 
 flash:
-	arduino-cli upload -p $(PORT) --fqbn $(BOARD) .
+	arduino-cli upload -p $(PORT) --fqbn $(FQBN) .
 
 clean:
 	rm -rf obj
