--- a/webots/controllers/snn/Makefile
+++ b/webots/controllers/snn/Makefile
@@ -20,7 +20,7 @@ CFLAGS = -O3 -std=c++11 -Wall -Wextra
 
 PDIR =  $(FDIR)/processors/risp
 
-VIZ_NET = $(shell pwd)/networks/difference3_risp.txt
+VIZ_NET = $(shell pwd)/networks/difference_risp_train.txt
 VIZ_HOST = "localhost"
 VIZ_PORT = 8100
 
@@ -56,7 +56,7 @@ runlog:
 
 runviz:
 	webots ../../worlds/simple.wbt &
-	/usr/local/webots/webots-controller --stdout_redirect $(NAME) $(VIZ_PORT) &
+	/usr/local/webots/webots-controller --stdout-redirect $(NAME) $(VIZ_PORT) &
 	sleep 1
 	cd $(FDIR)/viz; \
  	love . -i '{"source":"request","port":$(VIZ_PORT),"host":$(VIZ_HOST)}' \
