Restart bidirectional EPS32

--- a/sketches/esp32/old/onboard/Makefile
+++ b/sketches/esp32/old/onboard/Makefile
@@ -3,12 +3,12 @@ SKETCH = onboard
 # For complete list run arduino-cli board listall
 FQBN = esp32:esp32:um_tinypico
 
-PORT = /dev/ttyUSB1
+PORT = /dev/ttyUSB1 # /dev/ttyACM0
 
 LIBS = $(HOME)/Documents/Arduino/libraries
 
 build: $(SKETCH).ino
-	arduino-cli compile --libraries $(LIBS) --fqbn $(FQBN) $(SKETCH).ino
+	arduino-cli compile --libraries $(LIBS) --libraries ../../.. --fqbn $(FQBN) $(SKETCH).ino
 
 flash:
 	arduino-cli upload -p $(PORT) --fqbn $(FQBN) .
