=More two-way ESP32

--- a/sketches/esp32/onboard/Makefile
+++ b/sketches/esp32/onboard/Makefile
@@ -5,10 +5,10 @@ FQBN = esp32:esp32:um_tinypico
 
 PORT = /dev/ttyUSB1
 
-LIBS = $(HOME)/Documents/Arduino/libraries
+LIBS = $(HOME)/Documents/Arduino/libraries 
 
 build: $(SKETCH).ino
-	arduino-cli compile --libraries $(LIBS) --fqbn $(FQBN) $(SKETCH).ino
+	arduino-cli compile --libraries $(LIBS) --libraries ../../.. --fqbn $(FQBN) $(SKETCH).ino
 
 flash:
 	arduino-cli upload -p $(PORT) --fqbn $(FQBN) .
