new file:   src/esp32now_helper.hpp

--- a/sketches/esp32/dongle/Makefile
+++ b/sketches/esp32/dongle/Makefile
@@ -9,7 +9,7 @@ PORT = /dev/ttyUSB0
 LIBS = $(HOME)/Documents/Arduino/libraries
 
 build: $(SKETCH).ino
-	arduino-cli compile --libraries $(LIBS) --fqbn $(FQBN) $(SKETCH).ino
+	arduino-cli compile --libraries $(LIBS) --libraries ../../.. --fqbn $(FQBN) $(SKETCH).ino
 
 flash:
 	arduino-cli upload -p $(PORT) --fqbn $(FQBN) .
