--- a/webots/controllers/haskell/Makefile
+++ b/webots/controllers/haskell/Makefile
@@ -57,7 +57,7 @@ USE_C_API = true
 VERBOSE = 1
 
 run:
-	webots ../../worlds/simple.wbt &
+	webots ../../worlds/standard.wbt &
 	/usr/local/webots/webots-controller --stdout-redirect $(NAME)
 
 ### Do not modify: this includes Webots global Makefile.include
