--- a/webots/controllers/playback/Makefile
+++ b/webots/controllers/playback/Makefile
@@ -23,27 +23,13 @@ CXX_SOURCES = main.cpp
 
 all: $(NAME)
 
-#Un-comment if you want to try OpenCV
-#ifeq ($(OS),Windows_NT)
-#	OPENCV = "D:/opencv-mingw"
-#	INCLUDE = -I$(OPENCV)/include
-#	LIBRARIES = -L$(OPENCV)/x64/mingw/bin 
-#	LIBRARIES += -lopencv_core455 -lopencv_videoio455 -lopencv_highgui455 \
-#				 -lopencv_imgproc455
-#				
-#else
-#	INCLUDE += -I/usr/include/opencv4
-#	LIBRARIES = -L/usr/lib/x86_64-linux-gnu
-#    LIBRARIES += -lopencv_core -lopencv_videoio -lopencv_highgui -lopencv_imgproc
-#endif
-
 # Use the Webots C API in your C++ controller program
 USE_C_API = true
 
 VERBOSE = 1
 
 run:
-	webots ../../worlds/standard.wbt &
+	webots ../../worlds/supervised.wbt &
 	/usr/local/webots/webots-controller --stdout-redirect $(NAME)
 
 ### Do not modify: this includes Webots global Makefile.include
