--- a/webots/controllers/cplusplus/Makefile
+++ b/webots/controllers/cplusplus/Makefile
@@ -46,6 +46,10 @@ run:
 	webots ../../worlds/standard.wbt &
 	/usr/local/webots/webots-controller --stdout-redirect $(NAME)
 
+log:
+	webots ../../worlds/standard.wbt &
+	/usr/local/webots/webots-controller $(NAME) | tail +11 > log.csv
+
 ### Do not modify: this includes Webots global Makefile.include
 null :=
 space := $(null) $(null)
