Moved sim EKF into its own folder

--- a/webots/controllers/ekf/Makefile
+++ b/webots/controllers/ekf/Makefile
@@ -15,9 +15,9 @@
 CFLAGS = -O3 -std=c++11 -Wall -Wextra
 
 SRCDIR = ../../../src
-INCLUDE = -I$(SRCDIR)
+INCLUDE = -I$(SRCDIR) -I$(HOME)/Documents/Arduino/libraries/TinyEKF/src
 
-NAME = cplusplus
+NAME = ekf
 
 CXX_SOURCES = main.cpp
 
