--- a/newsim/server/Makefile
+++ b/newsim/server/Makefile
@@ -1,27 +1,6 @@
-#
-# Makefile for C++ / Haskell-based MultiSim flight controller
-#
-# Copyright (C) 2022 Simon D. Levy
-# 
-#  This file is part of SimFlightControl.
-#
-#  SimFlightControl is free software: you can redistribute it and/or modify it
-#  under the terms of the GNU General Public License as published by the Free
-#  Software Foundation, either version 3 of the License, or (at your option)
-#  any later version.
-#
-#  SimFlightControl is distributed in the hope that it will be useful, but
-#  WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
-#  or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for
-#  more details.
-#
-#  You should have received a copy of the GNU General Public License along with
-#  SimFlightControl. If not, see <https://www.gnu.org/licenses/>.
-
-
 HF_SRC = ../../src
 
-ALL = hackflight
+ALL = server
 
 all: $(ALL)
 
@@ -29,17 +8,17 @@ CFLAGS = -Wall -std=c++11
 
 all: $(ALL)
 
-hackflight: hackflight.o 
-	g++ -o hackflight hackflight.o 
+server: server.o 
+	g++ -o server server.o 
 
-hackflight.o: hackflight.cpp
-	g++ $(CFLAGS) -I$(HF_SRC) -Isockets -c hackflight.cpp
+server.o: server.cpp
+	g++ $(CFLAGS) -I$(HF_SRC) -Isockets -c server.cpp
 
-run: hackflight
-	./hackflight
+run: server
+	./server
 
 edit:
-	vim hackflight.cpp
+	vim server.cpp
 
 clean:
 	rm -rf $(ALL) *.o *~
