--- a/newsim/client/Makefile
+++ b/newsim/client/Makefile
@@ -9,14 +9,14 @@ all: $(ALL)
 client: client.o 
 	g++ -o client client.o 
 
-client.o: client.cpp dynamics.hpp
-	g++ $(CFLAGS) -c client.cpp
+client.o: main.cpp dynamics.hpp
+	g++ $(CFLAGS) -o client.o -c main.cpp
 
 run: client
 	./client
 
 edit:
-	vim client.cpp
+	vim main.cpp
 
 clean:
 	rm -rf $(ALL) *.o *~
