--- a/newsim/server/Makefile
+++ b/newsim/server/Makefile
@@ -11,14 +11,14 @@ all: $(ALL)
 server: server.o 
 	g++ -o server server.o 
 
-server.o: server.cpp
-	g++ $(CFLAGS) -I$(HF_SRC) -Isockets -c server.cpp
+server.o: main.cpp
+	g++ $(CFLAGS) -I$(HF_SRC) -Isockets -o server.o -c main.cpp
 
 run: server
 	./server
 
 edit:
-	vim server.cpp
+	vim main.cpp
 
 clean:
 	rm -rf $(ALL) *.o *~
