--- a/newsim/.gitignore
+++ b/newsim/.gitignore
@@ -1,19 +1,2 @@
-*.sln
-*.csv
-*.swp
-*.VC.db
-*.suo
-*.opendb
-.vs
-.idea
-.kdev4
-.vscode
-*~
-DerivedDataCache/
-Binaries/
-Intermediate/
-Saved/
-Extras/joytest/windows/Debug/
-Extras/joytest/windows/Release/
-Build/
-WindowsNoEditor/
+newsim
+*.o
