renamed:    webots/worlds/standard.wbt -> webots/worlds/old.wbt

--- a/webots/controllers/cplusplus/Makefile
+++ b/webots/controllers/cplusplus/Makefile
@@ -43,7 +43,7 @@ USE_C_API = true
 VERBOSE = 1
 
 run:
-	webots ../../worlds/standard.wbt &
+	webots ../../worlds/old.wbt &
 	/usr/local/webots/webots-controller --stdout-redirect $(NAME)
 
 plot:
